syntax = "proto3";

option go_package = "app/internal/services/common/users";

service UserService { 
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {}
}

message User {
    string UID = 1;
    string Username = 2;
    string Password = 3;
    string Email = 4;
    string Role = 5;
}
message GetUsersRequest{
    int32 UID = 1;
}
message GetUsersResponse{
    repeated User users = 1;
}
message AuthenticateRequest {
    string username = 1;
    string password = 2;
}
message AuthenticateResponse {
    string UID = 1;
    string Role = 2;
}